--- a/src/components/topBar/topBar.css
+++ b/src/components/topBar/topBar.css
@@ -2,6 +2,9 @@
     width: 100%;
     height: 50px;
     background-color: white;
+    position: sticky;
+    top: 0;
+    z-index: 999;
 }
 
 .topbarWrapper {
@@ -11,15 +14,22 @@
     align-items: center;
     justify-content: space-between;
 }
-
+.topRight {
+    display: flex;
+    align-items: center;
+    
+}
 .logo {
     font-size: 36px;
     color: darkblue;
-    font-weight: 500;
+    font-weight: bold;
 }
 
 .topbarIconContainer {
     position: relative;
+    cursor: pointer;
+    margin-right: 10px;
+    color: #555;
 }
 
 .topIconBadge {
@@ -35,4 +45,11 @@
     align-items: center;
     justify-content: center;
     font-size: 10px;
+}
+
+.topAvatar {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    cursor: pointer;
 }
