--- a/src/pages/product/product.css
+++ b/src/pages/product/product.css
@@ -62,4 +62,77 @@
         display: flex;
         justify-content: space-between;
     }
-    
+
+    .productInfoValue {
+        font-weight: 300;
+    }
+
+    .productBottom{
+        padding: 20px;
+        margin: 20px;
+        -webkit-box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
+        box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
+    }
+
+    .productForm {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .productFormLeft {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .productFormLeft > label {
+        margin-bottom: 10px;
+        color: gray;
+    }
+
+    .productFormLeft > input {
+        border: none;
+        border-bottom: 1px solid gray;
+        margin-bottom: 10px;
+        padding: 5px;
+    }
+
+    .productFormLeft > select {
+        margin-bottom: 10px;
+    }
+
+    .productUploadImg {
+        width: 100px;
+        height: 100px;
+        border-radius: 10px;
+        object-fit: cover;
+        margin-left: 20px;
+    }
+
+    .productFormRight {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+
+    .productUpload {
+        display: flex;
+        align-items: center;
+    }
+
+    .productButton {
+        border: none;
+        padding: 5px;
+        border-radius: 5px;
+        background-color: darkblue;
+        color: white;
+        cursor: pointer;
+        font-weight: 600;
+    }
+
+    #inStock, #active {
+        border: none;
+        border-bottom: 10px;
+        border-bottom: 1px solid gray;
+        cursor: pointer;
+        font-weight: 500;
+    }
